deploy: b7b196abb842856ba3a2f699d2ccc25f547ef037

--- a/orient2d.html
+++ b/orient2d.html
@@ -18,9 +18,9 @@
 
 <!-- CSS -->
 <title>src/delaunator/orient2d</title>
-<link rel="stylesheet" type="text/css" href="../nimdoc.out.css">
+<link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
-<script type="text/javascript" src="../dochack.js"></script>
+<script type="text/javascript" src="dochack.js"></script>
 
 <script type="text/javascript">
 function main() {
@@ -82,7 +82,7 @@ window.addEventListener('DOMContentLoaded', main);
   <div id="global-links">
     <ul class="simple">
     <li>
-      <a href="../theindex.html">Index</a>
+      <a href="theindex.html">Index</a>
     </li>
     </ul>
   </div>
@@ -147,7 +147,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-08 00:10:07 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-08 17:12:19 UTC</small>
       </div>
     </div>
   </div>
