--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@ window.addEventListener('DOMContentLoaded', main);
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">circumcenter
+      <ul class="simple nested-toc-section">boundHeight
+      <li><a class="reference" href="#boundHeight%2CDelaunator%5BT%5D"
+    title="boundHeight[T](d: Delaunator[T]): T">boundHeight[T](d: Delaunator[T]): T</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">boundWidth
+      <li><a class="reference" href="#boundWidth%2CDelaunator%5BT%5D"
+    title="boundWidth[T](d: Delaunator[T]): T">boundWidth[T](d: Delaunator[T]): T</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">circumcenter
       <li><a class="reference" href="#circumcenter%2CF%2CF%2CF%2CF%2CF%2CF"
     title="circumcenter[F](ax, ay, bx, by, cx, cy: F): tuple[x, y: F]">circumcenter[F](ax, ay, bx, by, cx, cy: F): tuple[x, y: F]</a></li>
 
@@ -232,57 +242,8 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="circumcenter,F,F,F,F,F,F">
-<dt><pre><span class="Keyword">func</span> <a href="#circumcenter%2CF%2CF%2CF%2CF%2CF%2CF"><span class="Identifier">circumcenter</span></a><span class="Other">[</span><span class="Identifier">F</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">ax</span><span class="Other">,</span> <span class="Identifier">ay</span><span class="Other">,</span> <span class="Identifier">bx</span><span class="Other">,</span> <span class="Identifier">by</span><span class="Other">,</span> <span class="Identifier">cx</span><span class="Other">,</span> <span class="Identifier">cy</span><span class="Other">:</span> <span class="Identifier">F</span><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">F</span><span class="Other">]</span> {.<span class="Identifier">inline</span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L122"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L122" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="fromCoords,seq[T]">
-<dt><pre><span class="Keyword">proc</span> <a href="#fromCoords%2Cseq%5BT%5D"><span class="Identifier">fromCoords</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">coordinates</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L579"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L579" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="fromPoints,seq[P],proc(P),proc(P)">
-<dt><pre><span class="Keyword">proc</span> <a href="#fromPoints%2Cseq%5BP%5D%2Cproc%28P%29%2Cproc%28P%29"><span class="Identifier">fromPoints</span></a><span class="Other">[</span><span class="Identifier">P</span><span class="Other">,</span> <span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">points</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">P</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">getX</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <span class="Identifier">P</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span> <span class="Other">=</span> <span class="Identifier">defaultGetX</span><span class="Other">;</span>
-                      <span class="Identifier">getY</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <span class="Identifier">P</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span> <span class="Other">=</span> <span class="Identifier">defaultGetY</span><span class="Other">)</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L598"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L598" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="hullNext,Delaunator,uint32">
-<dt><pre><span class="Keyword">func</span> <a href="#hullNext%2CDelaunator%2Cuint32"><span class="Identifier">hullNext</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">;</span> <span class="Identifier">id</span><span class="Other">:</span> <span class="Identifier">uint32</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">uint32</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L52"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L52" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="hullPrev,Delaunator,uint32">
-<dt><pre><span class="Keyword">func</span> <a href="#hullPrev%2CDelaunator%2Cuint32"><span class="Identifier">hullPrev</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">;</span> <span class="Identifier">id</span><span class="Other">:</span> <span class="Identifier">uint32</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">uint32</span></pre></dt>
+<div id="boundHeight,Delaunator[T]">
+<dt><pre><span class="Keyword">func</span> <a href="#boundHeight%2CDelaunator%5BT%5D"><span class="Identifier">boundHeight</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
 <dd>
 
 
@@ -293,8 +254,57 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="pointToLeftmostHalfedge,Delaunator,uint32">
-<dt><pre><span class="Keyword">func</span> <a href="#pointToLeftmostHalfedge%2CDelaunator%2Cuint32"><span class="Identifier">pointToLeftmostHalfedge</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">;</span> <span class="Identifier">pid</span><span class="Other">:</span> <span class="Identifier">uint32</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int32</span></pre></dt>
+<div id="boundWidth,Delaunator[T]">
+<dt><pre><span class="Keyword">func</span> <a href="#boundWidth%2CDelaunator%5BT%5D"><span class="Identifier">boundWidth</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L52"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L52" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="circumcenter,F,F,F,F,F,F">
+<dt><pre><span class="Keyword">func</span> <a href="#circumcenter%2CF%2CF%2CF%2CF%2CF%2CF"><span class="Identifier">circumcenter</span></a><span class="Other">[</span><span class="Identifier">F</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">ax</span><span class="Other">,</span> <span class="Identifier">ay</span><span class="Other">,</span> <span class="Identifier">bx</span><span class="Other">,</span> <span class="Identifier">by</span><span class="Other">,</span> <span class="Identifier">cx</span><span class="Other">,</span> <span class="Identifier">cy</span><span class="Other">:</span> <span class="Identifier">F</span><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">F</span><span class="Other">]</span> {.<span class="Identifier">inline</span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L130"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L130" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="fromCoords,seq[T]">
+<dt><pre><span class="Keyword">proc</span> <a href="#fromCoords%2Cseq%5BT%5D"><span class="Identifier">fromCoords</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">coordinates</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L587"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L587" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="fromPoints,seq[P],proc(P),proc(P)">
+<dt><pre><span class="Keyword">proc</span> <a href="#fromPoints%2Cseq%5BP%5D%2Cproc%28P%29%2Cproc%28P%29"><span class="Identifier">fromPoints</span></a><span class="Other">[</span><span class="Identifier">P</span><span class="Other">,</span> <span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">points</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">P</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">getX</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <span class="Identifier">P</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span> <span class="Other">=</span> <span class="Identifier">defaultGetX</span><span class="Other">;</span>
+                      <span class="Identifier">getY</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <span class="Identifier">P</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span> <span class="Other">=</span> <span class="Identifier">defaultGetY</span><span class="Other">)</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L606"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L606" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="hullNext,Delaunator,uint32">
+<dt><pre><span class="Keyword">func</span> <a href="#hullNext%2CDelaunator%2Cuint32"><span class="Identifier">hullNext</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">;</span> <span class="Identifier">id</span><span class="Other">:</span> <span class="Identifier">uint32</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">uint32</span></pre></dt>
 <dd>
 
 
@@ -305,15 +315,39 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="hullPrev,Delaunator,uint32">
+<dt><pre><span class="Keyword">func</span> <a href="#hullPrev%2CDelaunator%2Cuint32"><span class="Identifier">hullPrev</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">;</span> <span class="Identifier">id</span><span class="Other">:</span> <span class="Identifier">uint32</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">uint32</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L64"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L64" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="pointToLeftmostHalfedge,Delaunator,uint32">
+<dt><pre><span class="Keyword">func</span> <a href="#pointToLeftmostHalfedge%2CDelaunator%2Cuint32"><span class="Identifier">pointToLeftmostHalfedge</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">;</span> <span class="Identifier">pid</span><span class="Other">:</span> <span class="Identifier">uint32</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int32</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L68"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L68" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="update,Delaunator">
 <dt><pre><span class="Keyword">proc</span> <a href="#update%2CDelaunator"><span class="Identifier">update</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">this</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="delaunator.html#Delaunator"><span class="Identifier">Delaunator</span></a><span class="Other">)</span></pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L185"
+href="https://github.com/patternspandemic/delaunator-nim/tree/main/src/delaunator.nim#L193"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L185" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/patternspandemic/delaunator-nim/edit/devel/src/delaunator.nim#L193" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -327,7 +361,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-08 19:10:51 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-10 02:30:35 UTC</small>
       </div>
     </div>
   </div>
